--- a/services.html
+++ b/services.html
@@ -7,5 +7,9 @@
   </head>
   <body>
     <h1>Services Page</h1>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="team.html">Team</a>
+    <a href="services.html">Services</a>
   </body>
 </html>
