Changes to team.html

--- a/team.html
+++ b/team.html
@@ -6,6 +6,10 @@
     <title>Team</title>
 </head>
 <body>
-    
+    <h1>Our Team</h1>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="team.html">Our Team</a>
+    <a href="services.html">Our Services</a>
 </body>
 </html>
