--- a/home.html
+++ b/home.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GYM GIT Exercises</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>GYM GIT Exercises</h1>
-</body>
+    <p>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi facere
+      excepturi laudantium doloremque a voluptatem vitae! Rerum molestias ipsum
+      quibusdam repellendus eum? Numquam commodi praesentium quae facere
+      consequatur optio asperiores?
+    </p>
+  </body>
 </html>
