Some changes on faq.html

--- a/faq.html
+++ b/faq.html
@@ -7,5 +7,12 @@
 </head>
 <body>
     <h1>FAQ</h1>
+    <div>
+        <h2>What is Lorem Ipsum?</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, officiis.</p>
+
+        <h2>Where does it come from?</h2>
+        <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+    </div>
 </body>
 </html>
